fix footer on mobile

--- a/www/sass/_mixin.scss
+++ b/www/sass/_mixin.scss
@@ -8,4 +8,7 @@
     @else if $point == D {
         @media (min-width: 1200px)  { @content; }
     }
+    @else if $point == lessThanB {
+        @media (max-width: 767px)  { @content; }
+    }
 }
