--- a/www/sass/frame.scss
+++ b/www/sass/frame.scss
@@ -12,10 +12,13 @@ html, body {
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    // Negative indent footer by it's height
+    // Negative indent footer by its height
     margin: 0 auto -85px;
-    @include breakpoint(C) {
+    @include breakpoint(B) {
         margin-bottom: -65px;
+    }
+    @include breakpoint(C) {
+        margin-bottom: -45px;
     }
 }
 
@@ -23,44 +26,55 @@ html, body {
 #push,
 #footer {
     height: 85px;
-    @include breakpoint(C) {
+    @include breakpoint(B) {
         height: 65px;
     }
-}
-
-#footer {
-    .footer-separator {
-        visibility: hidden;
-    }
-    .footer-line1 {
-        display: block;
-    }
     @include breakpoint(C) {
-        .footer-separator {
-            visibility: visible;
-        }
-        .footer-line1 {
-            display: inline;
-        }
+        height: 45px;
     }
 }
 
 #wrap > .app-view-container {
     max-width: 980px;
     margin: 0 auto;
-    padding-left: 3px;
-    padding-right: 3px;
     margin-bottom: 20px;
+    padding-left: 23px;
+    padding-right: 23px;
 
     @include breakpoint(B) {
         padding-top: 65px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 }
 
 #footer {
+    font-size: 11.844px;
     background-color: #f5f5f5;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    .footer-separator {
+        visibility: hidden;
+        display: block;
+        height: 0px;
+    }
+
+    @include breakpoint(B) {
+        .footer-separator-tail {
+            display: inline;
+            visibility: visible;
+        }
+    }
+    @include breakpoint(C) {
+        .footer-separator {
+            display: inline;
+            visibility: visible;
+        }
+    }
+
     .credit {
-        margin: 20px 0;
+        margin: 10px 0;
         text-align: center;
     }
     .flattr-wrapper {
